--- a/css/styles.css
+++ b/css/styles.css
@@ -168,7 +168,8 @@ button.white {
     width: 100%;
     overflow: hidden;
     position: relative;
-    margin-top: 80px; /* Adjust based on navbar height */
+    margin-top: 60px; /* Adjust based on navbar height */
+
     justify-content: center;
     align-items: center;
 }
@@ -183,8 +184,9 @@ button.white {
 }
 #img-slider .slide .info {
     position: absolute;
-    top: 50%;
-    z-index: 1;
+    top: 60%; /* Adjusted to position text below the navbar */
+
+    z-index: 0;
     transform: translateY(-50%);
     display: flex;
     flex-direction: column;
